--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>bg.kotz</groupId>
-    <artifactId>spring-session-jdbc-example</artifactId>
+    <artifactId>spring-project-template</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-session-example</name>
+    <name>spring-project-template</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -65,6 +65,11 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
